--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body>
+  <body
+    class="min-w-screen max-w-screen min-h-screen max-h-screen overflow-hidden bg-cover bg-no-repeat bg-center"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
