--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
   >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script
+      src="https://kit.fontawesome.com/c56f08e6fc.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
