--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/movie_tab_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>NORP MOVIES</title>
   </head>
   <body
     class="min-w-screen max-w-screen min-h-screen max-h-screen overflow-hidden bg-cover bg-no-repeat bg-center"
